--- a/style.css
+++ b/style.css
@@ -1,34 +1,66 @@
 body {
-    font-family: "Prompt", sans-serif;
-    margin: 0px;
-  }
-  h1 {
-    font-size: 50px;
-  }
-  .orange {
-    color: orange;
-  }
-  section {
-    display: flex;
-  }
-  .half-width {
-    width: 50%;
-    padding-left: 5%;
-  }
-  .half-width img {
-    width: 90%;
-  }
-  .top_banner {
-    background-image: url(images/top-banner.png);
-    background-repeat: no-repeat;
-  }
-  .button-link {
-    text-decoration: none;
-    color: aliceblue;
-    background-image: linear-gradient(orangered, orange);
-    background-color: orangered;
-    font-weight: 600;
-    padding: 10px 40px;
-    border-radius: 10px;
-  }
-  
+  font-family: "Prompt", sans-serif;
+  margin: 0px;
+}
+h1 {
+  font-size: 50px;
+}
+.orange {
+  color: orange;
+}
+.flexible_container {
+  display: flex;
+}
+.half-width {
+  width: 50%;
+  padding-left: 5%;
+}
+.half-width img {
+  width: 90%;
+}
+.top_banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
+}
+.mid_banner {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  padding-top: 80px;
+}
+.button-link {
+  text-decoration: none;
+  color: aliceblue;
+  background-image: linear-gradient(orangered, orange);
+  background-color: orangered;
+  font-weight: 600;
+  padding: 10px 40px;
+  border-radius: 10px;
+}
+.developer_part {
+  box-shadow: 20px 20px 40px gray;
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  border-radius: 5px;
+  padding-bottom: 60px;
+}
+#full_stack_developer {
+  border-left: 7px solid tomato;
+}
+#baby_developer {
+  border-left: 7px solid blue;
+}
+h2 {
+  font-size: 40px;
+}
+.bottom_banner {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  padding-bottom: 150px;
+}
+.p {
+  text-align: center;
+}
