--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+  background-position-y: 250px;
   padding-top: 80px;
 }
 .button-link {
